--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "PrivateKey": "9685ufghdrh55hjshh",
+    "AccessTokenExpiresInMinutes": 60,
+    "RefreshTokenExpiresInMinutes": 10080,
+    "Issuer": "GraphQLSandbox.Issuer",
+    "Audience": "GraphQLSandbox.Audience"
+  }
 }
